--- a/examen-2/index.html
+++ b/examen-2/index.html
@@ -8,25 +8,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <main class="main-form">
         <section class="section">
             <div class="title">
-                <h1>Login Form</h1>
+                <img src="./images/Instagram_logo_PNG8.png" alt="instagram" class="avatar">
             </div>
             <form class="form">
                 <label>Email or Phone</label>
                 <input type="email">
                 <label>Password</label>
                 <input type="password">
+                <p class="text"><a href="#" class="link">Forgot Password?</a></p>
+                <div class="container-button">
+                    <button type="submit" class="button"> Login</button>
+                    <p class="text-2">Not a member? <a href="#" class="link-2">Signup now</a></p>
+                </div>
             </form>
-            <p class="text"><a href="#" class="link">Forgot Password?</a></p>
-            <div class="container-button">
-                <button type="submit" class="button"> Login</button>
-            </div>
-            <div class="container-text">
-                <p class="text-2">Not a member? <a href="#" class="link-2">Signup now</a></p>
-            </div>
         </section>
-    </main>
 </body>
 </html>
